--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "feathers-client": "^2.3.0",
     "intl": "^1.2.5",
     "lodash": "^4.17.4",
+    "masonry": "0.0.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue": "^2.3.3",
+    "vue-flow-grid": "0.0.4",
     "vue-router": "^2.6.0",
+    "vueisotope": "^3.1.0",
     "vuetify": "^0.14.11",
     "vuetrend": "^0.2.2",
     "vuex": "^2.3.1"
