--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "element-ui": "^1.4.4",
     "feathers-client": "^2.3.0",
     "intl": "^1.2.5",
     "lodash": "^4.17.4",
     "masonry": "0.0.2",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
+    "quasar-extras": "0.0.8",
+    "quasar-framework": "^0.14.3",
     "vue": "^2.3.3",
+    "vue-echarts": "^2.4.0",
     "vue-flow-grid": "0.0.4",
     "vue-router": "^2.6.0",
     "vueisotope": "^3.1.0",
     "vuetify": "^0.14.11",
-    "vuetrend": "^0.2.2",
+    "vuetrend": "git+https://github.com/hotdogee/vue-trend.git",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
@@ -84,6 +86,8 @@
     "shelljs": "^0.7.6",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.8",
     "vue-loader": "^12.1.0",
