--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@tweenjs/tween.js": "^17.1.1",
     "babel-runtime": "^6.25.0",
     "feathers-client": "^2.3.0",
+    "highcharts": "^5.0.14",
     "intl": "^1.2.5",
+    "jsmpeg": "^1.0.0",
     "lodash": "^4.17.4",
     "masonry": "0.0.2",
     "plotly.js": "^1.30.1",
