--- a/src/statics/manifest.json
+++ b/src/statics/manifest.json
@@ -13,7 +13,7 @@
             "type": "image/png"
         }
     ],
-    "start_url": "/index.html",
+    "start_url": "/",
     "theme_color": "#4caf50",
     "background_color": "#4caf50",
     "display": "standalone"
