--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@tweenjs/tween.js": "^17.1.1",
     "babel-runtime": "^6.25.0",
     "feathers-client": "^2.3.0",
-    "highcharts": "^5.0.14",
+    "highcharts": "^6.0.2",
     "intl": "^1.2.5",
     "jsmpeg": "^1.0.0",
     "lodash": "^4.17.4",
@@ -26,6 +26,7 @@
     "spa-http-server": "^0.9.0",
     "vue": "^2.4.4",
     "vue-echarts": "^2.4.0",
+    "vue-highcharts": "0.0.10",
     "vue-router": "^2.7.0",
     "vueisotope": "^3.1.0",
     "vuetrend": "git+https://github.com/hotdogee/vue-trend.git",
