--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "quasar-framework": "^0.14.1",
     "spa-http-server": "^0.9.0",
     "vue": "^2.4.4",
+    "vue-analytics": "^5.2.1",
     "vue-echarts": "^2.4.0",
     "vue-highcharts": "0.0.10",
     "vue-router": "^2.7.0",
+    "vue-ua": "^1.4.0",
     "vueisotope": "^3.1.0",
     "vuetrend": "git+https://github.com/hotdogee/vue-trend.git",
     "vuex": "^2.3.1"
