--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@tweenjs/tween.js": "^17.1.1",
     "babel-runtime": "^6.25.0",
+    "config": "^1.27.0",
+    "dotenv": "^4.0.0",
     "feathers-client": "^2.3.0",
     "highcharts": "^6.0.2",
     "intl": "^1.2.5",
