--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^4.0.0",
     "feathers-client": "^2.3.0",
     "highcharts": "^6.0.2",
+    "hls.js": "^0.11.0",
     "intl": "^1.2.5",
     "jsmpeg": "^1.0.0",
     "lodash": "^4.17.4",
