--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "node build/script.dev.js",
     "build": "node build/script.build.js",
     "lint": "eslint --ext .js,.vue src",
-    "start": "http-server ./dist --push-state -c 60 -p 8083 -d false"
+    "start": "http-server ./dist -c-1 -p 8083 -d false --push-state"
   },
   "dependencies": {
     "@tweenjs/tween.js": "^17.1.1",
