--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-highcharts": "0.0.10",
     "vue-router": "^3.0.1",
     "vue-ua": "^1.4.0",
+    "vuebars": "^0.1.3",
     "vueisotope": "^3.1.0",
     "vuetrend": "git+https://github.com/hotdogee/vue-trend.git",
     "vuex": "^3.0.0"
