--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "config": "^1.27.0",
     "dotenv": "^4.0.0",
     "feathers-client": "^2.3.0",
+    "flv.js": "^1.5.0",
     "highcharts": "^6.0.2",
     "hls.js": "^0.12.4",
     "intl": "^1.2.5",
