--- a/package.json
+++ b/package.json
@@ -1,107 +1,35 @@
 {
   "name": "scada-iot-hmi",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "SCADA/IoT Human Machine Interface",
+  "productName": "SCADA/IOT",
+  "cordovaId": "in.hanl.scada",
   "author": "Han Lin <hotdogee@gmail.com>",
   "private": true,
   "scripts": {
-    "clean": "node build/script.clean.js",
-    "dev": "node build/script.dev.js",
-    "build": "node build/script.build.js",
     "lint": "eslint --ext .js,.vue src",
-    "start": "http-server ./dist -c-1 -p 8083 -d false --push-state"
+    "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "@neutrium/thermo.eos.iapws97": "^2.0.2",
-    "@tweenjs/tween.js": "^17.1.1",
-    "babel-runtime": "^6.25.0",
-    "config": "^1.27.0",
-    "dotenv": "^4.0.0",
-    "feathers-client": "^2.3.0",
-    "highcharts": "^6.0.2",
-    "hls.js": "^0.11.0",
-    "intl": "^1.2.5",
-    "jsmpeg": "^1.0.0",
-    "lodash": "^4.17.4",
-    "masonry": "0.0.2",
-    "plotly.js": "^1.31.2",
-    "quasar-extras": "0.x",
-    "quasar-framework": "^0.14.6",
-    "spa-http-server": "^0.9.0",
-    "vue": "^2.5.2",
-    "vue-analytics": "^5.2.1",
-    "vue-echarts": "^2.4.1",
-    "vue-highcharts": "0.0.10",
-    "vue-router": "^3.0.1",
-    "vue-ua": "^1.4.0",
-    "vuebars": "^0.1.3",
-    "vueisotope": "^3.1.0",
-    "vuetrend": "git+https://github.com/hotdogee/vue-trend.git",
-    "vuex": "^3.0.0"
-  },
-  "browserify": {
-    "transform": [
-      "glslify"
-    ]
+    "@quasar/extras": "^1.0.0",
+    "axios": "^0.18.1",
+    "quasar": "^1.0.0",
+    "vue-i18n": "^8.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "babel-core": "^6.0.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-2": "^6.0.0",
-    "colors": "^1.1.2",
-    "connect-history-api-fallback": "^1.4.0",
-    "copy-webpack-plugin": "^4.2.0",
-    "css-loader": "^0.28.0",
-    "es6-promise": "^4.1.1",
-    "eslint": "^4.10.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.2.2",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^0.11.1",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "glob": "^7.1.2",
-    "html-webpack-plugin": "^2.30.1",
-    "http-proxy-middleware": "^0.17.0",
-    "ify-loader": "^1.1.0",
-    "json-loader": "^0.5.7",
-    "opn": "^5.0.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "postcss-loader": "^1.0.0",
-    "progress-bar-webpack-plugin": "^1.10.0",
-    "purify-css": "^1.2.6",
-    "shelljs": "^0.7.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "sw-precache-webpack-plugin": "^0.11.4",
-    "uglify-es": "^3.1.6",
-    "url-loader": "^0.5.7",
-    "vue-loader": "^12.2.2",
-    "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.20.0",
-    "webpack-merge": "^4.1.0"
+    "@quasar/app": "^1.0.0",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.10.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-vue": "^5.0.0"
   },
   "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+    "node": ">= 8.9.0",
+    "npm": ">= 5.6.0",
+    "yarn": ">= 1.6.0"
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
+    "last 1 version, not dead, ie >= 11"
   ]
 }
