--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "vue"
   ],
   "standard.options": {
+    "parser": "babel-eslint",
     "plugins": [
       "vue"
     ]
@@ -11,6 +12,7 @@
   "files.associations": {
     "*.vue": "vue"
   },
+  "eslint.alwaysShowStatus": true,
   "eslint.validate": [
     "javascript",
     "javascriptreact",
@@ -19,15 +21,15 @@
       "autoFix": true
     },
   ],
-  "vetur.format.defaultFormatter.js": "prettier-eslint",
-  "standard.autoFixOnSave": true,
   "prettier.eslintIntegration": true,
+  "prettier.trailingComma": "none",
   "prettier.singleQuote": true,
   "prettier.semi": false,
+  "vetur.format.defaultFormatter.js": "prettier-eslint",
   "vetur.validation.script": false,
   "vetur.validation.template": false,
-  "eslint.autoFixOnSave": true,
-  "eslint.alwaysShowStatus": true,
-  "prettier.trailingComma": "none",
-  "javascript.format.insertSpaceBeforeFunctionParenthesis": true
+  "javascript.format.insertSpaceBeforeFunctionParenthesis": true,
+  "editor.formatOnSave": true,
+  "commitizen.showOutputChannel": "always",
+  "commitizen.subjectLength": 120
 }
