--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "cross-env NODE_ENV=production http-server ./dist/pwa -c 1 -p 8083 -d false --push-state",
     "dev": "quasar dev -m pwa",
     "build": "quasar build -m pwa",
+    "precommit": "lint-staged",
     "lint": "eslint --ext .js,.vue src",
     "test": "echo \"See package.json => scripts for available tests.\" && exit 0",
     "test:unit": "jest --updateSnapshot",
@@ -56,12 +57,17 @@
     "@quasar/quasar-app-extension-testing-security-antivuln": "^1.0.0-alpha.1",
     "@quasar/quasar-app-extension-testing-unit-jest": "^1.0.0",
     "@vue/eslint-config-standard": "^4.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
+    "babel-eslint": "^10.0.2",
+    "eslint": "^6.0.1",
     "eslint-config-standard": "^13.0.1",
-    "eslint-loader": "^2.1.1",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue": "^5.2.2",
+    "husky": "^3.0.0",
+    "lint-staged": "^9.2.0",
     "prettier": "^1.18.2",
     "prettier-eslint": "^9.0.0",
     "prettier-eslint-cli": "^5.0.0",
