--- a/package.json
+++ b/package.json
@@ -37,15 +37,18 @@
     "git-revision-webpack-plugin": "^3.0.3",
     "highcharts": "^7.1.2",
     "hls.js": "^0.12.4",
+    "jwt-decode": "^2.2.0",
     "localforage": "^1.7.3",
     "quasar": "^1.0.0",
+    "serialize-error": "^4.1.0",
     "socket.io-client": "^2.2.0",
     "vue-analytics": "^5.17.0",
     "vue-i18n": "^8.0.0",
     "vue-recaptcha": "^1.2.0",
     "vuebars": "^0.1.3",
     "vueisotope": "^3.1.2",
-    "vuetrend": "^0.3.4"
+    "vuetrend": "^0.3.4",
+    "vuex-persist": "^2.0.1"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0",
