--- a/package.json
+++ b/package.json
@@ -28,15 +28,16 @@
     "audit:lighthouse": "lighthouse http://localhost:3000 view --output-path=./test/lighthouse/reports/index.html --config-path=./test/lighthouse/configs/full-config.js"
   },
   "dependencies": {
-    "@feathersjs/authentication-client": "^4.3.0-pre.1",
-    "@feathersjs/feathers": "^4.3.0-pre.1",
-    "@feathersjs/socketio-client": "^4.3.0-pre.1",
+    "@feathersjs/authentication-client": "^1.0.11",
+    "@feathersjs/feathers": "^3.3.1",
+    "@feathersjs/socketio-client": "^1.2.1",
     "@neutrium/thermo.eos.iapws97": "^2.0.2",
     "@quasar/extras": "^1.0.0",
     "@tweenjs/tween.js": "^17.4.0",
     "add-asset-webpack-plugin": "^1.0.0",
     "axios": "^0.19.0",
     "dotenv": "^8.0.0",
+    "feathers-client": "^2.4.0",
     "git-revision-webpack-plugin": "^3.0.3",
     "highcharts": "^7.1.2",
     "hls.js": "^0.12.4",
@@ -51,7 +52,7 @@
     "vuebars": "^0.1.3",
     "vueisotope": "^3.1.2",
     "vuelidate": "^0.7.4",
-    "vuetrend": "^0.3.4",
+    "vuetrend": "git+https://github.com/hotdogee/vue-trend.git",
     "vuex-persist": "^2.0.1"
   },
   "devDependencies": {
