--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "axios": "^0.19.0",
     "dotenv": "^8.0.0",
     "feathers-client": "^2.4.0",
+    "flv.js": "^1.5.0",
     "git-revision-webpack-plugin": "^3.0.3",
     "highcharts": "^7.1.2",
     "hls.js": "^0.12.4",
