fix no image error

--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "audit:lighthouse": "lighthouse http://localhost:3000 view --output-path=./test/lighthouse/reports/index.html --config-path=./test/lighthouse/configs/full-config.js"
   },
   "dependencies": {
-    "@feathersjs/authentication-client": "^1.0.11",
-    "@feathersjs/feathers": "^3.3.1",
-    "@feathersjs/socketio-client": "^1.2.1",
+    "@feathersjs/authentication-client": "^4.3.0-pre.2",
+    "@feathersjs/feathers": "^4.3.0-pre.2",
+    "@feathersjs/socketio-client": "^4.3.0-pre.2",
     "@neutrium/thermo.eos.iapws97": "^2.0.2",
     "@quasar/extras": "^1.0.0",
     "@tweenjs/tween.js": "^17.4.0",
@@ -48,9 +48,9 @@
     "serialize-error": "^4.1.0",
     "socket.io-client": "^2.2.0",
     "vue-analytics": "^5.17.0",
-    "vue-i18n": "^8.0.0",
+    "vue-i18n": "^8.13.0",
     "vue-recaptcha": "^1.2.0",
-    "vuebars": "^0.1.3",
+    "vuebars": "^0.1.5",
     "vueisotope": "^3.1.2",
     "vuelidate": "^0.7.4",
     "vuetrend": "git+https://github.com/hotdogee/vue-trend.git",
@@ -75,7 +75,7 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.2.2",
-    "husky": "^3.0.1",
+    "husky": "^3.0.3",
     "lint-staged": "^9.2.1",
     "prettier": "^1.18.2",
     "prettier-eslint": "^9.0.0",
