--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "vue-analytics": "^5.17.0",
     "vue-i18n": "^8.14.0",
     "vue-recaptcha": "^1.2.0",
-    "vuebars": "^0.1.5",
+    "vuebars": "0.1.3",
     "vueisotope": "^3.1.2",
     "vuelidate": "^0.7.4",
     "vuetrend": "git+https://github.com/hotdogee/vue-trend.git",
