--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scada-iot-hmi",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "description": "SCADA/IoT Human Machine Interface",
   "productName": "地熱發電監控系統",
   "cordovaId": "in.hanl.scada",
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production http-server ./dist/pwa -c 1 -p 8083 -d false --push-state",
     "dev": "quasar dev -m pwa",
+    "release": "standard-version",
     "build": "cross-env NODE_ENV=production quasar build -m pwa",
     "precommit": "lint-staged",
     "lint": "eslint --ext .js,.vue src",
@@ -80,7 +81,8 @@
     "prettier": "^1.18.2",
     "prettier-eslint": "^9.0.0",
     "prettier-eslint-cli": "^5.0.0",
-    "standard": "^13.1.0"
+    "standard": "^13.1.0",
+    "standard-version": "^7.0.0"
   },
   "engines": {
     "node": ">= 8.9.0",
