--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,6 @@
   "javascript.format.insertSpaceBeforeFunctionParenthesis": true,
   "editor.formatOnSave": true,
   "commitizen.showOutputChannel": "always",
-  "commitizen.subjectLength": 120
+  "commitizen.subjectLength": 120,
+  "eslint.autoFixOnSave": true
 }
