--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "scada-iot-hmi",
   "version": "3.0.0",
   "description": "SCADA/IoT Human Machine Interface",
-  "productName": "scada-iot-hmi",
+  "productName": "SCADA/IoT",
+  "cordovaId": "in.hanl.scada",
   "author": "Han Lin <hotdogee@gmail.com>",
   "type": "module",
   "private": true,
@@ -15,29 +16,35 @@
     "postinstall": "quasar prepare"
   },
   "dependencies": {
-    "axios": "^1.2.1",
-    "vue-i18n": "^11.0.0",
-    "pinia": "^3.0.1",
+    "@feathersjs/socketio-client": "^5.0.33",
     "@quasar/extras": "^1.16.4",
+    "@tailwindcss/postcss": "^4.1.3",
+    "axios": "^1.2.1",
+    "pinia": "^3.0.1",
     "quasar": "^2.16.0",
+    "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.1.3",
     "vue": "^3.4.18",
+    "vue-i18n": "^11.0.0",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@intlify/unplugin-vue-i18n": "^6.0.5",
+    "@quasar/app-vite": "^2.1.0",
+    "@types/node": "^22.14.0",
+    "@vue/eslint-config-prettier": "^10.1.0",
+    "@vue/eslint-config-typescript": "^14.4.0",
+    "autoprefixer": "^10.4.2",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^10.0.0",
     "globals": "^16.0.0",
-    "vue-tsc": "^2.0.29",
-    "@vue/eslint-config-typescript": "^14.4.0",
-    "vite-plugin-checker": "^0.9.0",
-    "@vue/eslint-config-prettier": "^10.1.0",
     "prettier": "^3.3.3",
-    "@types/node": "^22.14.0",
-    "@intlify/unplugin-vue-i18n": "^6.0.5",
-    "@quasar/app-vite": "^2.1.0",
-    "autoprefixer": "^10.4.2",
-    "typescript": "^5.8.3"
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "typescript": "^5.8.3",
+    "vite-plugin-checker": "^0.9.0",
+    "vue-tsc": "^2.0.29"
   },
   "engines": {
     "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
