--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@tailwindcss/postcss": "^4.1.3",
     "axios": "^1.2.1",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "quasar": "^2.16.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.3",
     "vue": "^3.4.18",
+    "vue-gtag": "^3.3.0",
     "vue-i18n": "^11.0.0",
     "vue-router": "^4.0.12"
   },
