--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   },
   "dependencies": {
     "@feathersjs/socketio-client": "^5.0.33",
+    "@hotdogee/vue3-trend": "^2.0.2",
+    "@neutrium/thermo.eos.iapws97": "^2.0.2",
     "@quasar/extras": "^1.16.4",
     "@tailwindcss/postcss": "^4.1.3",
     "axios": "^1.2.1",
+    "lodash": "^4.17.21",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "quasar": "^2.16.0",
@@ -28,12 +31,15 @@
     "vue": "^3.4.18",
     "vue-gtag": "^3.3.0",
     "vue-i18n": "^11.0.0",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue3-bars": "^2.0.3",
+    "vue3-isotope": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@intlify/unplugin-vue-i18n": "^6.0.5",
     "@quasar/app-vite": "^2.1.0",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.14.0",
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.4.0",
