--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@neutrium/thermo.eos.iapws97": "^2.0.2",
     "@quasar/extras": "^1.16.4",
     "@tailwindcss/postcss": "^4.1.3",
+    "@tweenjs/tween.js": "^17.4.0",
     "axios": "^1.2.1",
+    "highcharts": "^7.1.3",
     "lodash": "^4.17.21",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
