--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,6 +5,6 @@
   "semi": false,
   "singleQuote": true,
   "printWidth": 100,
-  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"],
+  "plugins": ["prettier-plugin-tailwindcss"],
   "tailwindStylesheet": "./src/css/app.scss"
 }
