--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@feathersjs/socketio-client": "^5.0.33",
+    "@heroicons/vue": "^2.2.0",
     "@hotdogee/vue3-trend": "^2.0.2",
     "@neutrium/thermo.eos.iapws97": "^2.0.2",
     "@quasar/extras": "^1.16.4",
@@ -25,6 +26,7 @@
     "axios": "^1.2.1",
     "highcharts": "^12.2.0",
     "lodash": "^4.17.21",
+    "lucide-vue-next": "^0.503.0",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "quasar": "^2.16.0",
