--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@eslint/js": "^9.14.0",
     "@intlify/unplugin-vue-i18n": "^6.0.5",
     "@quasar/app-vite": "^2.1.0",
+    "@quasar/quasar-app-extension-qmarkdown": "^2.0.5",
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.14.0",
     "@vue/eslint-config-prettier": "^10.1.0",
