--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@quasar/extras": "^1.16.4",
     "@tailwindcss/postcss": "^4.1.3",
     "@tweenjs/tween.js": "^25.0.0",
+    "@vueuse/core": "^13.1.0",
     "axios": "^1.2.1",
     "highcharts": "^12.2.0",
     "lodash": "^4.17.21",
