feat(i18n): Detect locale from browser settings
Uses `@formatjs/intl-localematcher` to determine the initial locale based on the user's browser language preferences.
Defaults to 'en' if no match is found or detection fails.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@feathersjs/socketio-client": "^5.0.33",
+    "@formatjs/intl-localematcher": "^0.6.1",
     "@heroicons/vue": "^2.2.0",
     "@hotdogee/vue3-trend": "^2.0.2",
     "@neutrium/thermo.eos.iapws97": "^2.0.2",
