feat(i18n): improve internationalization on the chart page.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,12 +8,14 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "cSpell.words": [
     "feathersjs",
+    "formatjs",
     "gtag",
     "hanl",
     "hotdogee",
     "iapws",
     "IAPWS",
     "intlify",
+    "localematcher",
     "neutrium",
     "persistedstate",
     "qmarkdown",
