--- a/package.json
+++ b/package.json
@@ -7,6 +7,19 @@
   "author": "Han Lin <hotdogee@gmail.com> (https://github.com/hotdogee)",
   "type": "module",
   "private": true,
+  "keywords": [
+    "vue",
+    "vue3",
+    "scada",
+    "iot",
+    "geothermal",
+    "industrial",
+    "monitoring",
+    "control",
+    "automation",
+    "human-machine-interface",
+    "hmi"
+  ],
   "scripts": {
     "lint": "eslint -c ./eslint.config.js \"./src*/**/*.{ts,js,cjs,mjs,vue}\"",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
